Introduce DefensiveMatchup for realistic defender selection
ressure or interception.